footstep_planner code ported into public repo

--- a/footstep_planner/mainpage.dox
+++ b/footstep_planner/mainpage.dox
@@ -2,7 +2,7 @@
 \mainpage
 \htmlinclude manifest.html
 
-\b footstep_planner is ... 
+\b nao_path_planning is ... 
 
 <!-- 
 Provide an overview of your package.
